get /discussions/:id
